[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/SoundControl.gd" type="Script" id=1]
[ext_resource path="res://Sounds/jumpspook1_v2.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/jumpspook2_v2.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/clickButton.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/clickHover.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/jumpspook3.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/escapeAmb.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/wavyness.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sounds/clickButton2.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/Music/introMusic.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sounds/jumpspookFan.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/jumpspookPistol.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/jumpspookLight.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/jumpspookLever.wav" type="AudioStream" id=14]

[node name="SoundController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Jumpscare1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0

[node name="Jumpscare2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[node name="Jumpscare3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0

[node name="JumpscareFan" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -6.0

[node name="JumpscarePistol" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -6.0

[node name="JumpscareLight" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -6.0

[node name="JumpscareLever" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -6.0

[node name="ClickHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0

[node name="ClickConfirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0

[node name="ClickQuick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
pitch_scale = 1.02

[node name="EscapeAmb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0

[node name="Wavy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -14.0

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -22.0

[node name="EscapeTween" type="Tween" parent="."]

[node name="IntroTween" type="Tween" parent="."]

[connection signal="tween_completed" from="EscapeTween" to="." method="_on_EscapeTween_tween_completed"]
